update <li> to <button> and css style

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           <h1>How did we do?</h1>
           <p>Please let us know how we did with your support request. All feedback is appreciated
             to help us improve our offering!</p>
-          <ul class="rating-container">
-            <li id="1" class="rating-btn" aria-selected="false" role="button">1</li>
-            <li id="2" class="rating-btn" aria-selected="false" role="button">2</li>
-            <li id="3" class="rating-btn" aria-selected="false" role="button">3</li>
-            <li id="4" class="rating-btn" aria-selected="false" role="button">4</li>
-            <li id="5" class="rating-btn" aria-selected="false" role="button">5</li>
-          </ul>
+          <div class="rating-container">
+            <button id="1" class="rating-btn" aria-selected="false" role="button">1</button>
+            <button id="2" class="rating-btn" aria-selected="false" role="button">2</button>
+            <button id="3" class="rating-btn" aria-selected="false" role="button">3</button>
+            <button id="4" class="rating-btn" aria-selected="false" role="button">4</buttom>
+            <button id="5" class="rating-btn" aria-selected="false" role="button">5</button>
+          </div>
           <button id="submit" class="btn" type="submit">Submit</button>
         </div>
       </section>
