--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           <p>Please let us know how we did with your support request. All feedback is appreciated
             to help us improve our offering!</p>
           <div class="rating-container">
-            <button id="1" class="rating-btn" aria-selected="false" role="button">1</button>
-            <button id="2" class="rating-btn" aria-selected="false" role="button">2</button>
-            <button id="3" class="rating-btn" aria-selected="false" role="button">3</button>
-            <button id="4" class="rating-btn" aria-selected="false" role="button">4</buttom>
-            <button id="5" class="rating-btn" aria-selected="false" role="button">5</button>
+            <button id="1" class="rating-btn" aria-pressed="true">1</button>
+            <button id="2" class="rating-btn" aria-pressed="false">2</button>
+            <button id="3" class="rating-btn" aria-pressed="false">3</button>
+            <button id="4" class="rating-btn" aria-pressed="false">4</buttom>
+            <button id="5" class="rating-btn" aria-pressed="false">5</button>
           </div>
           <button id="submit" class="btn" type="submit">Submit</button>
         </div>
