--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <p>Please let us know how we did with your support request. All feedback is appreciated
             to help us improve our offering!</p>
           <div class="rating-container">
-            <button id="1" class="rating-btn" aria-pressed="true">1</button>
+            <button id="1" class="rating-btn" aria-pressed="false">1</button>
             <button id="2" class="rating-btn" aria-pressed="false">2</button>
             <button id="3" class="rating-btn" aria-pressed="false">3</button>
             <button id="4" class="rating-btn" aria-pressed="false">4</buttom>
