--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://www.twitter.com/mikaelduru" target="_blank">Duru Michael C.</a>
+      Coded by <a href="https://www.twitter.com/durumykael" target="_blank">Duru Michael C.</a>
     </p>
   </footer>
   <!-- Footer ends -->
