--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <section id="thank-you" class="card2" hidden>
         <div class="pad-2">
           <img class="illustration-ty" src="./images/illustration-thank-you.svg" alt="Thank you illustration image" />
-          <span class="rate">You selected <span id="selected-rating">0</span> out of 5</span>
+          <span class="rate">You selected <span id="selected-rating"></span> out of 5</span>
           <h2>Thank you!</h2>
           <p>We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
         </div>
